# emaux-api

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: api.py
tests/: test_api.py
